--- a/html/main.gohtml
+++ b/html/main.gohtml
@@ -7,7 +7,7 @@
   <title>Старт</title>
 </head>
 <body>
- Выберите участок
+ <p>Выберите участок
  <a href="/uch/1">1</a>
  <a href="/uch/2">2</a>
  <a href="/uch/3">3</a>
@@ -20,6 +20,7 @@
  <a href="/uch/10">10</a>
  <a href="/uch/11">11</a>
  <a href="/uch/12">12</a>
+  </p>
 <br>
 </body>
 </html>
