--- a/html/generator.gohtml
+++ b/html/generator.gohtml
@@ -60,9 +60,11 @@
         <input type="submit" value="Сформировать">
     </form>
 <!--     </details> -->
+
 <table class="main_table">
     <thead>
 <tr>
+    <td>№</td>
     {{if .Enp}}<td>ЕНП</td> {{end}}
    {{if .Fio}} <td>Фамилия</td> {{end}}
    {{if .Fio}} <td>Имя</td> {{end}}
@@ -81,13 +83,13 @@
     {{if .CardNum}}<td>Карта</td>{{end}} {{$cardNum := .CardNum}}
 </tr>
     </thead>
-    {{range .Pacients}}
-    <tr>
+    {{range $k, $v := .Pacients}}
+<td>{{$localview.Adder $k}}</td>
+
          <td> <a href="/enp/{{.Enp}}">{{.Enp}}</a></td>
          <td>{{.Surname}}</td>
          <td>{{.Name}}</td>
          <td>{{.Patronymic}} </td>
-{{/*         <td> {{ $localview.GenderView .Gender}} </td>*/}}
          {{if $gender}} <td> {{$localview.GenderView .Gender}}</td>{{end}}
          {{if $bday}} <td> {{ $localview.DateFormat .Birthday}} </td>{{end}}
          {{if $snils}}<td> {{.Snils}} </td>{{end}}
@@ -115,5 +117,6 @@
     {{end}}
 
 </table>
+
 {{end}}
 
