--- a/html/generator.gohtml
+++ b/html/generator.gohtml
@@ -61,7 +61,9 @@
         <input type="submit" value="Сформировать">
     </form>
 <!--     </details> -->
-
+<p>
+   На участке {{.QuantityUch}} человек
+</p>
 <table class="main_table">
     <thead>
 <tr>
